# Opencv4

./: CMakeLists.txt  main.cpp
